<resources>
    <string name="app_name">UdeM Móvil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_skip">Omitir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeTitleFirst">Encuentra Lugares</string>
    <string name="welcomeDescriptionFirst">dolor sit amet dolor sit amet dolor sit amet.</string>
    <string name="welcomeTitleSecond">Historial de clases</string>
    <string name="welcomeTitleThird">Informacion de docentes</string>
    <string name="welcomeDescriptionSecond">dolor sit amet dolor sit amet dolor sit amet.</string>
    <string name="welcomeDescriptionThird">dolor sit amet dolor sit amet dolor sit amet.</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="action_sign_in">Inicar sesión</string>
    <!-- Keyboard problem-->
    <string name="vowel">á é í ó ú</string>
    <!-- Activities titles -->
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_note">Calificaciones</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_schedule">Clases</string>
    <!-- Navigation -->
    <string name="nav_notes">Calificaciones</string>
    <string name="nav_class">Clases</string>
    <string name="nav_setting">Configuraciones</string>
    <string name="nav_location">Lugares</string>
    <string name="nav_teacher">Profesores</string>
    <string name="nav_logout">Cerrar sesión</string>
    <string name="notes_accumulated">Acumulado</string>
    <string name="notes_quiz">Exámen</string>
    <string name="notes_final">Final</string>
    <string name="notes_rescue">Rescate</string>

    <!-- Googlee api key -->
    <string name="google_api_key">AIzaSyDv0hBPiARb8igqSZ-tzSiBqDCTX-V56zY</string>
    <string name="profile_class_approved">Aprobadas : </string>
    <string name="profile_class_pending">Pendientes : </string>
    <string name="login_error">Usuario o Contaseña inválido</string>
    <string name="nav_history">Historial</string>
    <string name="title_activity_history">Historial</string>
    <string name="activity_no_finished">Estamos trabajando en esta vista!</string>
    <string name="title_activity_teacher">Profesores</string>
    <string name="action_back">Regresar</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_email">Correo</string>
    <string name="action_save">Guardar</string>
</resources>
