<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:title="@string/nav_notes"
            android:icon="@drawable/nav_notes"/>
        <item
            android:id="@+id/nav_class"
            android:title="@string/nav_class"
            android:icon="@drawable/nav_class"/>
        <item
            android:id="@+id/nav_teacher"
            android:title="@string/nav_teacher"
            android:icon="@drawable/nav_teacher"/>
        <item
            android:id="@+id/nav_map_location"
            android:title="@string/nav_location"
            android:icon="@drawable/nav_map_location"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_setting"
            android:icon="@drawable/nav_settings"/>
        <item
            android:id="@+id/nav_sign_out"
            android:title="Cerrar sesion"
            android:icon="@drawable/nav_logout"/>
    </group>

</menu>
