<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary"
    tools:context="com.mobile.udem.ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_login_user"
        />
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
     <EditText
         android:id="@+id/loginUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         style="@style/edit_text_login"
         android:background="@drawable/rounded_edit_default"
         android:hint="@string/login_user"/>
    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/edit_text_login"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edit_default"
        android:hint="@string/login_password"/>
    </LinearLayout>
    <Button
        android:id="@+id/loginSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_opacy"
        android:background="@drawable/rounded_button_disabled"
        android:enabled="false"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/container"
        android:padding="15dp"
        android:text="@string/action_sign_in"/>
</RelativeLayout>
